k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80t
  ype: ClusterIP
